fix: correct test index html path

--- a/test/index.html
+++ b/test/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <head>
   FFjavascript test
 </head>
 <body>
-  <script src="../build/main.umd.min.js"></script>
+  <script src="../dist/lib.esm/index.js"></script>
   <script>
     console.log(Ffjavascript);
     const { Scalar, ZqField } = Ffjavascript;
